--- a/client/app/viewRequest/viewRequest.html
+++ b/client/app/viewRequest/viewRequest.html
@@ -1,9 +1,9 @@
 <div id="view-request-container">
-  <div class="card">
+  <div class="card" ng-show="request.name">
     <h3>Loan Request - {{request.event}}</h3>      
 
     <hr>
-    
+
     <div class="row">
       <div class="col-md-12">
         <strong class="sub-header">Loan Details</strong>
