--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/adminHome/adminHome.controller.js"></script>
+          <script src="app/adminHome/adminHome.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/request/Request.service.js"></script>
